# resumebuddy

./: .gitignore  AGENTS.md  GEMINI.md  INTERVIEW_PREP_COMPANY_ALPHA.md  README.md  evaluate_batch.py  fetch_jobs.py  pyproject.toml
.github/: README.md  copilot-instructions.md
.github/agents/: README.md  career-strategist.agent.md  council-chairman.agent.md  migration-buddy.agent.md  ops-sre.agent.md  security-reviewer.agent.md  staff-architect.agent.md  test-engineer.agent.md
.github/instructions/: README.md  efficiency-caveman.instructions.md  governance-awp.instructions.md  python-backend.instructions.md
.github/prompts/: bootstrap-agentic-governance.prompt.md  codex-init-existing-project.prompt.md  incident-debug.prompt.md  review-branch.prompt.md
.github/skills/: gap-analyzer.skill.md  llm-council.skill.md  shitshow-evaluator.skill.md  star-formatter.skill.md  systematic-debugging.skill.md  verification.skill.md
knowledge-base/.obsidian/: workspace.json
knowledge-base/companies/: google.md
knowledge-base/emails/: outreach_templates.md
knowledge-base/strategies/: architectural_narratives.md  experience_presentation.md  job_scrutiny.md  salary_negotiation.md
scripts/: add_manual_jobs.py  add_turing.py  batch_resolve.py  evaluate_custom_batch.py  evaluate_missing.py  evaluate_unscored.py  fix_accuracy.py  generate_all_docx.py  generate_batch_docs.py  generate_batch_new.py  generate_dashboard.py  generate_freewill_docs.py  generate_missing_tier.py  generate_mozilla_0to1.py  generate_nxtlevel_docs.py  generate_roblox_cl_docx.py  generate_roblox_docs.py  generate_roblox_reliability.py  generate_roblox_reliability_cl.py  generate_spoton_cl_docx.py  generate_spoton_docx.py  generate_tier1_remaining.py  generate_webflow_docs.py  generate_yahoo_docx.py  live_bridge.py  migrate_to_sqlite.py  resolve_and_evaluate.py  sync_db_dashboard.py
src/resumebuddy/: analyzer.py  data_generator.py  discovery.py  generator.py  main.py  models.py  ollama_client.py  profile_manager.py  researcher.py  scraper.py
src/resumebuddy/application/: safety.py  (+2 more)
tests/: eval_suite.py
tests/application/: test_use_cases.py
tests/domain/: test_models.py  test_services.py
(+23 files in other folders)
